Change cell styles to avoid having too much cells affected by cursor moves

--- a/styles/table-edit.less
+++ b/styles/table-edit.less
@@ -154,6 +154,10 @@ atom-table-editor {
       padding-right: 24px;
       height: 100%;
 
+      &.selected {
+        background: @background-color-highlight;
+      }
+
       &.order {
         padding-right: 40px;
         cursor: n-resize;
